# template-vscode-qtquick6.9

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
